--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "AppPembayaranAndroid"]
-	path = AppPembayaranAndroid
-	url = https://github.com/ucuptimposu/AppPembayaranAndroid.git
+[submodule "app-pembayaran-android"]
+	path = app-pembayaran-android
+	url = https://github.com/ucuptimposu/app-pembayaran-android.git
